fix(ContractDisplayModal): fix double scrolling area and lock buttons to bottom

--- a/src/app/styles/global.css
+++ b/src/app/styles/global.css
@@ -64,6 +64,11 @@ a {
   animation: shake 4s normal linear infinite;
 }
 
+.mantine-Modal-content {
+  scroll-behavior: smooth !important;
+  -webkit-overflow-scrolling: touch !important;
+}
+
 @-webkit-keyframes shake {
   1%  {transform: rotate(15deg)}
   2%  {transform: rotate(0deg)}
